k8s/gateway/route-httpbin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-bin
spec:
  parentRefs:
  - name: mpo-api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /http-bin
    filters:
     - type: URLRewrite
       urlRewrite:
         path:
           type: ReplacePrefixMatch
           replacePrefixMatch: /
    backendRefs:
    - name: httpbin
      port: 8000
