k8s/gateway/route-mpo-api-search.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mpo-api
spec:
  parentRefs:
  - name: mpo-api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /search
    backendRefs:
    - name: mpo-api-search-fastapi
      port: 8000
