k8s/gateway/route-mpo-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mpo-frontend
  namespace: mpo
spec:
  parentRefs:
  - name: mpo-api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /frontend
    backendRefs:
    - name: mpo-frontend
      port: 80
